// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Limited Reserve Transfers from AH Account Alice -> Spiritnet Account Alice > Spiritnet xcmpQueue 1`] = `
[
  {
    "data": {
      "error": "UntrustedReserveLocation",
      "messageHash": "(hash)",
      "messageId": "(hash)",
      "weight": {
        "proofSize": 0,
        "refTime": 200000000,
      },
    },
    "method": "Fail",
    "section": "xcmpQueue",
  },
]
`;

exports[`Limited Reserve Transfers from AH Account Alice -> Spiritnet Account Alice > sender events Balances 1`] = `
[
  {
    "data": {
      "amount": 10000000000,
      "assetId": {
        "interior": {
          "X1": {
            "GlobalConsensus": "Kusama",
          },
        },
        "parents": 2,
      },
      "from": "15jSz35ugoWTc61xHPoxEkHte4o7UanKCk1gx1dizA8yuNs8",
      "to": "13cKp88mpGREFCq8KsJEFjpSBnjFuCNWq6bmD3js7fu4f66e",
    },
    "method": "Transferred",
    "section": "foreignAssets",
  },
]
`;

exports[`Limited Reserve Transfers from AH Account Alice -> Spiritnet Account Alice > sender events xcm pallet 1`] = `
[
  {
    "data": {
      "outcome": {
        "Complete": {
          "used": {
            "proofSize": "(rounded 6200)",
            "refTime": "(rounded 290000000)",
          },
        },
      },
    },
    "method": "Attempted",
    "section": "polkadotXcm",
  },
  {
    "data": {
      "fees": [
        {
          "fun": {
            "Fungible": 310000000,
          },
          "id": {
            "interior": "Here",
            "parents": 1,
          },
        },
      ],
      "paying": {
        "interior": {
          "X1": [
            {
              "AccountId32": {
                "id": "(hash)",
                "network": "Polkadot",
              },
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "FeesPaid",
    "section": "polkadotXcm",
  },
  {
    "data": {
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": "(rounded 2100)",
            },
          ],
        },
        "parents": 1,
      },
      "message": [
        {
          "ReserveAssetDeposited": [
            {
              "fun": {
                "Fungible": 10000000000,
              },
              "id": {
                "interior": {
                  "X1": [
                    {
                      "GlobalConsensus": "Kusama",
                    },
                  ],
                },
                "parents": 2,
              },
            },
          ],
        },
        "ClearOrigin",
        {
          "BuyExecution": {
            "fees": {
              "fun": {
                "Fungible": 10000000000,
              },
              "id": {
                "interior": {
                  "X1": [
                    {
                      "GlobalConsensus": "Kusama",
                    },
                  ],
                },
                "parents": 2,
              },
            },
            "weightLimit": "Unlimited",
          },
        },
        {
          "DepositAsset": {
            "assets": {
              "Wild": "All",
            },
            "beneficiary": {
              "interior": {
                "X1": [
                  {
                    "AccountId32": {
                      "id": "(hash)",
                      "network": null,
                    },
                  },
                ],
              },
              "parents": 0,
            },
          },
        },
      ],
      "messageId": "(hash)",
      "origin": {
        "interior": {
          "X1": [
            {
              "AccountId32": {
                "id": "(hash)",
                "network": "Polkadot",
              },
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "Sent",
    "section": "polkadotXcm",
  },
]
`;

exports[`Limited Reserve Transfers from AH Account Alice -> Spiritnet Account Alice > sender events xcm queue pallet 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
]
`;
